# embassy-rp-quickstart

./: Cargo.toml  Embed.toml  cargo-generate.toml  rust-toolchain.toml
.cargo/: config.toml
cargo-generate/: Cargo.toml  pre-hook.rhai  wifi-blinky.rs
src/: main.rs
