[package]
edition = "2021"
name = "embassy-rp-starter"
version = "0.1.0"
license = "MIT OR Apache-2.0"
resolver = "2"


[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }

embassy-executor = { version = "0.3.3", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.4.0", features = ["defmt"] }
embassy-time = { version = "0.1.5", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }

embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }

## need these for pio
# pio-proc = "0.2"
# pio = "0.2.1"

## USB + logging via USB support (note: embassy-usb-logger requires portable-atomic with critical-section feature enabled)
# embassy-usb = { version = "0.1.0", features = ["defmt"] }
# embassy-usb-logger = { version = "0.1.0" }
# portable-atomic = { version = "1.5.1", features = ["critical-section"] }
# log = "0.4"

## network support
# embassy-net = { version = "0.2.0", features = ["defmt", "nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }

# wiznet ethernet driver support
# embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }

## pico-w support
# cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
# cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "4634316749c41dd5d8cc2f316033c9098369ed2f" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "4634316749c41dd5d8cc2f316033c9098369ed2f" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "4634316749c41dd5d8cc2f316033c9098369ed2f" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "4634316749c41dd5d8cc2f316033c9098369ed2f" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "4634316749c41dd5d8cc2f316033c9098369ed2f" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "4634316749c41dd5d8cc2f316033c9098369ed2f" }

## Uncomment these if you uncomment the associated crates above
## USB
# embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "4634316749c41dd5d8cc2f316033c9098369ed2f" }
# embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "4634316749c41dd5d8cc2f316033c9098369ed2f" }
## network support
# embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "4634316749c41dd5d8cc2f316033c9098369ed2f" }
# wiznet ethernet driver support
# embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy", rev = "4634316749c41dd5d8cc2f316033c9098369ed2f" }
## pico-w support
# cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "4634316749c41dd5d8cc2f316033c9098369ed2f" }
# cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "4634316749c41dd5d8cc2f316033c9098369ed2f" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'

