[package]
edition = "2021"
name = "{{crate_name}}"
version = "0.1.0"
license = "MIT OR Apache-2.0"
resolver = "2"


[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }

embassy-executor = { version = "0.3.3", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.4.0", features = ["defmt"] }
embassy-time = { version = "0.1.5", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }

embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
{%- if pio %}
## need these for pio
pio-proc = "0.2"
pio = "0.2.1"
{%- endif %}
{%- if usb %}
## USB + logging via USB support (note: embassy-usb-logger requires portable-atomic with critical-section feature enabled)
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.1.0" }
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
log = "0.4"
{%- endif %}
{%- if wiznet or cyw43 %}
## network support
embassy-net = { version = "0.2.0", features = ["defmt", "nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
{%- endif %}
{%- if wiznet %}
# wiznet ethernet driver support
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
{%- endif %}
{%- if cyw43 %}
## pico-w support
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
{%- endif %}

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "{{embassyrev}}" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "{{embassyrev}}" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "{{embassyrev}}" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "{{embassyrev}}" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "{{embassyrev}}" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "{{embassyrev}}" }
{%- if usb %}
## USB
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "{{embassyrev}}" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "{{embassyrev}}" }
{%- endif %}
{%- if wiznet or cyw43 %}
## network support
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "{{embassyrev}}" }
{%- endif %}
{%- if wiznet %}
# wiznet ethernet driver support
embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy", rev = "{{embassyrev}}" }
{%- endif %}
{%- if cyw43 %}
## pico-w support
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "{{embassyrev}}" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "{{embassyrev}}" }
{%- endif %}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
